[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day16"
path = "src/day16.rs"

[[bin]]
name = "day17"
path = "src/day17.rs"

[[bin]]
name = "day22"
path = "src/day22.rs"

[[bin]]
name = "day24"
path = "src/day24.rs"

[[bin]]
name = "day24b"
path = "src/day24b.rs"


[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
rbl_circular_buffer = "0.1.2"
utf8-read = "0.4.0"
z3 = {version="0.11.2", features=["static-link-z3"]}
